k8s/redis-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stateful-set
  labels:
    app: redis
spec:
  serviceName: "redis"
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redix
          image: redis:5-alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-volume
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
