k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - image: stephengrider/multi-server
        name: server
        ports:
          - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 3
