k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  ports:
  - name: "3000"
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: client
