k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  ports:
  - name: "5000"
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: server
